# cmake-demo

./: README.md
Demo2/: CMakeLists.txt  main.cc
Demo3/: CMakeLists.txt
Demo4/: CMakeLists.txt
